# stock-assistant

./: .gitignore  README.md  docs-plan.md  pyproject.toml
backtests/: tulong_backtest.py
config/: alert.yaml  strategy.yaml  universe.yaml
data/trades/: tulong_trades.csv
data/watchlists/: 0527D3_candidate_AND_174309.csv  0527D4_strong_radar_recovered_174309.csv  0528D3_position_manual_171700.csv  0528D3_watch_manual_review_003017.csv  0528D3_watch_manual_review_003017.csv.backup_20260528_101951  0528D3_watch_manual_review_003017.csv.backup_fix600021_20260528_102027  0528D4_position_rollover_214902.csv  0528D4_watch_manual_review_231050.csv  0529D3_D1_filtered_222809.csv  0529D3_watch_manual_review_221512.csv  0529D3_watch_scan_001500.csv  0529D3_watch_scan_20260529_020356.csv  0529D3_watch_scan_20260529_025241.csv  0529D3_watch_scan_20260529_081538.csv  0529D3_watch_scan_214437.csv  tulong_active_watchlist.backup_20260528_003205.csv  tulong_active_watchlist.backup_20260528_215550.csv  tulong_active_watchlist.backup_20260528_231113.csv  tulong_active_watchlist.csv  tulong_d3.backup_20260527_093254.csv  (+7 more)
docs/: tulong-position-pool-concepts.md
reports/: akshare_sina_integration.md  case_check.md  curl_cffi_eastmoney.md  eastmoney_json_sample.md  playwright_eastmoney.md  tushare_integration.md
scripts/: preopen_guard_check.py
tests/: test_akshare_provider.py  test_alerting.py  test_backtest.py  test_eastmoney.py  test_indicators.py  test_journal.py  test_preopen_rotate_watchlist.py  test_tulong.py  test_tulong_selection_cli.py  test_tushare_provider.py
(+43 files in other folders)
